Fix avatar alignment in activity stream
* CSS changes introduced by 007b88b1cb5700dadbc1f9e23834bbc83205f8c0
caused the avatars in the activity stream to be offset by 30px from the
left margin

--- a/themes/default/media/css/less/styles.less
+++ b/themes/default/media/css/less/styles.less
@@ -1591,7 +1591,7 @@ article.container div.parameter input[type="password"] {
 }
 
 article.container div.parameter textarea,
-article.container div.parameter img {
+article.container div.image-field img {
    margin-left: 30px;
 }
 
